--- a/scss/pages/_view-events.scss
+++ b/scss/pages/_view-events.scss
@@ -17,6 +17,6 @@
         border-radius: 50%;
         width: 40px;
         height: 40px;
-        background: white;
+        /*background: white;*/
     }
 }
